fix text disappearing behind banner img
… in certain browsers

--- a/client/src/components/BannerBlock/Frontend.scss
+++ b/client/src/components/BannerBlock/Frontend.scss
@@ -24,6 +24,8 @@
 .banner-element__content {
   position: absolute;
   width: 90%;
+  left: 40px; 
+  top: 20px;
 }
 
 .banner-element__call-to-action {
